# ccc-rust

./: .gitignore  AGENTS.md  Cargo.toml  MERGE_SUMMARY.md  Makefile
.github/: rust.prompt.md
.github/workflows/: ci.yml
examples/: usage_example.rs
src/: agent.rs  claude.rs  lib.rs  main.rs  mcp_adapter.rs  mcp_server.rs
src/.github/: .agent.md  .instruct.md  refactor.instruction.md
src/workflows/: mod.rs
