[package]
name = "ccc-rust-mcp"
version = "0.1.0"
edition = "2021"
authors = ["eyshoit-commits"]
description = "Cloud Code Router and MCP Server implementation in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "ccc-mcp-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
